[gd_scene load_steps=12 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://resource/toggle_fullscreen_enter.png" type="Texture" id=2]
[ext_resource path="res://resource/button_exit_game_down.png" type="Texture" id=3]
[ext_resource path="res://resource/button_decrease_screen_size_up.png" type="Texture" id=4]
[ext_resource path="res://resource/button_play_game_down.png" type="Texture" id=5]
[ext_resource path="res://resource/button_increase_screen_size_down.png" type="Texture" id=6]
[ext_resource path="res://resource/button_play_game_up.png" type="Texture" id=7]
[ext_resource path="res://resource/button_increase_screen_size_up.png" type="Texture" id=8]
[ext_resource path="res://resource/button_exit_game_up.png" type="Texture" id=9]
[ext_resource path="res://resource/button_decrease_screen_size_down.png" type="Texture" id=10]
[ext_resource path="res://resource/toggle_fullscreen_exit.png" type="Texture" id=11]

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ToggleFullscreen" type="TextureButton" parent="."]
margin_left = 542.0
margin_top = 80.0
margin_right = 611.0
margin_bottom = 136.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 11 )

[node name="DecreaseScreen" type="TextureButton" parent="."]
margin_left = 542.0
margin_top = 120.0
margin_right = 611.0
margin_bottom = 176.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 10 )

[node name="ExitGame" type="TextureButton" parent="."]
margin_left = 542.0
margin_top = 25.0
margin_right = 611.0
margin_bottom = 81.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 3 )

[node name="IncreaseScreen" type="TextureButton" parent="."]
margin_left = 576.0
margin_top = 120.0
margin_right = 645.0
margin_bottom = 176.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )

[node name="PlayGame" type="TextureButton" parent="."]
margin_left = 254.0
margin_top = 152.0
margin_right = 386.0
margin_bottom = 208.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )

[connection signal="toggled" from="ToggleFullscreen" to="." method="_on_ToggleFullscreen_toggled"]
[connection signal="pressed" from="DecreaseScreen" to="." method="_on_ScreenSmaller_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="IncreaseScreen" to="." method="_on_ScreenBigger_pressed"]
[connection signal="pressed" from="PlayGame" to="." method="_on_Play_pressed"]
